改變了 標題 內文 影片區

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="col-phone-100">
               <div class="index-cover">
                 <div class="index-container">
-                  <h1 class="_title">首頁標語</h1>
+                  <h1 class="_title">貓咪知識庫</h1>
                   <div>
                     <button type="button" class="btn btn_light">
                       登入
@@ -73,10 +73,14 @@
                   </div>
                   <div class="_content">
                     <h4 class="_title">
-                      title title title title title title 
+                      英國短毛貓 
                     </h4>
                     <p class="_detail">
-                      detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail detail 
+                      英國短毛貓(British Shorthair)簡稱英短，也有人會叫他們「英國藍」。據說在古羅馬帝國時期，他們隨著凱薩大帝東征西討，靠著高強的捕鼠能力，保衛羅馬軍的糧倉。差不多也在這個時候，英國短毛貓的祖先們被帶到英國，深受盎格魯撒克遜人的喜愛，到了十九世紀，英國人挑選了其中比較討喜的外型，開始刻意培育，漸漸地就變成現在看到的模樣。愛麗絲夢遊仙境裡的柴郡貓就是以英國短毛貓作為原型，所創造出來的角色。
+
+                      中大型的體型，又大又圓的雙眼，再加上圓滾滾的外型配上濃密的披毛，讓英國短毛貓們看起來就像可愛的大玩偶。公認的英短有十五種花色，其中以灰藍色最為經典，而眼睛的顏色則是配合毛色有所不同，例如灰藍色的英短通常都擁有金色或者古銅色的眼睛。
+
+                      英國短毛貓的個性基本上就如同外表一般，溫和而內斂，不太會亂吼亂叫，也不容易發脾氣。也因為這樣的性格，他們不太喜歡運動，最喜歡做的兩件事就是：趴在主人腿上睡覺，以及在主人的腳邊跟上跟下。他們有的適應力很強，在陌生的環境之下依舊能夠處之泰然。 
                     </p>
                   </div>
                   <div class="_action">
@@ -98,10 +102,10 @@
                   </div>
                   <div class="_content">
                     <h4 class="_title">
-                      title title title title title title 
+                      賓士貓
                     </h4>
                     <p class="_detail">
-                      detail detail detail detail detail detail detail detail detail 
+                      由黑色+白色 雙色組成，雖然和乳牛貓一樣是黑白貓，但與乳牛貓不同的是：賓士貓臉上像是戴著黑色面罩的黑白區塊就像賓士車的Mark，而這也是賓士貓的名稱由來喔！ 賓士貓的尾巴及背部通常都是黑色的，看起來就像是戴著面罩、穿著西裝的帥氣紳士呢！ 
                     </p>
                   </div>
                   <div class="_action">
@@ -123,7 +127,7 @@
               <div class="col-phone-100 col-tablet-67">
                 <div class="video-player">
                   <div class="ratio_16_9">
-                    <iframe id="video_player" class="ratio_content" src="https://www.youtube.com/embed/p7ZsBPK656s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe id="video_player" class="ratio_content" src="https://www.youtube.com/embed/7ENaBNc0ehg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                 </div>  
               </div>
@@ -131,11 +135,11 @@
                 <div class="video-list-container mdl-shadow--2dp">
                   <div class="ratio_8_9">
                     <ul class="ratio_content video-list ">
-                      <li class="_video" data-video="FkgWquwZr4Q">1. HONDA CBR650R</li>
-                      <li class="_video" data-video="IxQhn2ad7qc">2. APRILLIA RS660</li>
-                      <li class="_video" data-video="">3. YAMAHA YZF-R6</li>
-                      <li class="_video" data-video="">4. SUZUKI GSX-R600</li>
-                      <li class="_video" data-video="ZpsV5SGa5R4">5. Lost Sky - Need You [NCS Release]</li>
+                      <li class="_video" data-video="7ENaBNc0ehg">1. 養貓要花多少錢？好味家養貓花費精算！</li>
+                      <li class="_video" data-video="o7yxHexbzzs">2. 貓一定要從小養？領養小貓好還是大貓好？</li>
+                      <li class="_video" data-video="kwa3G23fPzE">3. 養貓10種不推薦物品 真的能多省不少開支</li>
+                      <li class="_video" data-video="csxR8G0ZTQk">4. 貓砂盆到底買哪個好？全部買來試一次！雪屋真的超難用嗎？</li>
+                      <li class="_video" data-video="mbpg8nyDHxE">5. 市售貓飲水機大評比！貓咪真的會多喝水嗎？</li>
                     </ul>
                   </div>
                 </div>
